chore(zero-api): GET /files/:id/metadata
